# vussa

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yml  plan-fixes.txt  plan-fixes2.txt  plan-fixes3.txt  plan.txt
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_auth_admin.sql  0003_admin_console.sql  0004_private_conversations.sql  0005_demo_history.sql  0006_message_collaboration.sql  0007_saved_messages_reports.sql  0008_notification_preferences.sql  0009_message_owner.sql  0010_channel_features.sql  0011_moderation_controls.sql  0012_channel_posting_controls.sql  0013_drafts.sql  0014_account_recovery.sql  0015_channel_moderators.sql  0016_outbox_claims.sql  0017_notification_delivery.sql  0018_notification_subscriptions.sql  0019_notification_idempotency.sql  0020_notification_delivery_idempotency.sql  0021_message_search_metadata.sql
backend/src/: account.rs  api.rs  api_models.rs  auth.rs  bootstrap.rs  cache.rs  clock.rs  config.rs  database.rs  discovery.rs  error.rs  lib.rs  main.rs  media.rs  metrics.rs  models.rs  notification_delivery.rs  notifications.rs  outbox.rs  persistence.rs  realtime.rs  repository.rs  routes.rs  services.rs  state.rs  storage.rs  websocket.rs  workspace.rs
backend/src/api/: account.rs  admin.rs  channels.rs  discovery.rs  drafts.rs  media.rs  members.rs  notifications.rs  types.rs
backend/src/auth/: recovery.rs
backend/src/notifications/: delivery.rs
backend/src/repository/: postgres.rs
backend/src/storage/: scanner.rs
backend/src/websocket/: broadcast.rs  connection.rs  handler.rs  history.rs  presence.rs  rooms.rs
backend/tests/: infrastructure.rs
bench/: Cargo.toml  README.md
bench/src/: main.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  (+3 more)
(+52 files in other folders)
